gradiente y animaciones en index y nosotros.html

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Nosotros</title>
 </head>
+
 <body id="gridAreas">
     <header id="gridHeader" class="flexHeader">
         <div class="flexHeaderImg">
-            <a href="../index.html"><img class="imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura"> </a>
+            <a href="../index.html"><img class="animate__animated animate__fadeInDown imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura">
+            </a>
         </div>
         <div class="flexHeaderDiv">
             <nav class="flexHeaderNav">
@@ -23,17 +28,17 @@
                     </li>
                     <li>
                         <a class="menu" href="../paginas/servicios.html">Servicios</a>
-                            <ul>
-                                <li>
-                                    <a class="menu" href="../paginas/chapaypintura.html"> Chapa y pintura</a>
-                                </li>
-                                <li>
-                                    <a class="menu" href="../paginas/desabollado.html"> Desabollado sin pintar</a>
-                                </li>
-                                <li>
-                                    <a class="menu" href="../paginas/lustre.html"> Lustre</a>
-                                </li>
-                            </ul>
+                        <ul>
+                            <li>
+                                <a class="menu" href="../paginas/chapaypintura.html"> Chapa y pintura</a>
+                            </li>
+                            <li>
+                                <a class="menu" href="../paginas/desabollado.html"> Desabollado sin pintar</a>
+                            </li>
+                            <li>
+                                <a class="menu" href="../paginas/lustre.html"> Lustre</a>
+                            </li>
+                        </ul>
                         </a>
                     </li>
                     <li>
@@ -49,16 +54,27 @@
     <main id=gridMain class="fondoCeleste">
 
         <section class="flexSectionNosotros">
-            <p class="textoMargin">  Nuestra historia comenzó un buen día mientras conversabamos acerca de nuestro trabajo, teníamos buena mano de obra pero trabajamos en entornos separados, fue la amistad la que hizo que unos cuantos amigos y conocidos formaramos lo que somos ahora, con el tiempo muchos se fueron y tomamos difrentes caminos, al día de hoy somos una empresa familiar forjados con bases sólidas en responsabilidad, atención, servicio y calidad. Todo lo necesario para llevar una empresa al éxito, tenemos un solo camino y ese camino es ir para adelante. Si necesita reparar su auto somos su mejor opción. <span class="mayuscula fuenteGrande">¡Los esperamos!</span> </p>
+            <p class="animate__animated animate__zoomIn textoMargin"> Nuestra historia comenzó un buen día mientras conversabamos acerca de nuestro
+                trabajo, teníamos buena mano de obra pero trabajamos en entornos separados, fue la amistad la que hizo
+                que unos cuantos amigos y conocidos formaramos lo que somos ahora, con el tiempo muchos se fueron y
+                tomamos difrentes caminos, al día de hoy somos una empresa familiar forjados con bases sólidas en
+                responsabilidad, atención, servicio y calidad. Todo lo necesario para llevar una empresa al éxito,
+                tenemos un solo camino y ese camino es ir para adelante. Si necesita reparar su auto somos su mejor
+                opción.</p>
+                <p class="animate__animated animate__lightSpeedInLeft textoMargin mayuscula fuenteGrande">¡Los esperamos!</p>
 
-            <img src="../imagenes/equipoNosotros.jpg" alt="El equipo">
+            <img data-aos="zoom-in-up" src="../imagenes/equipoNosotros.jpg" alt="El equipo">
         </section>
 
         <section class="flexSectionNosotros2">
             <!--Prometo que la img será un video =D-->
-            <img class="imgSectionNosotros"" src="../imagenes/hombre en cabina.jpg" alt="El equipo">
-            <p class="imgSectionNosotros alineacionTextoDerecha">Solo una pequeña muestra de nuestro trabajo, en esta ocasión nuestro cliente vino desalentado, pensando en que debería pintar la tapa de baúl en su auto, afortunadamente no hubo necesidad de pintar, que aparte de ser mucho más caro no se conserva la pintura original. Nosotros que queremos a los autos tratamos a toda costa hacer el menor daño posible en la chapa. 
-            <br>
+            <img data-aos="fade-right" class="imgSectionNosotros"" src=" ../imagenes/hombre en cabina.jpg" alt="El equipo">
+            <p data-aos="fade-left" class="imgSectionNosotros alineacionTextoDerecha">Solo una pequeña muestra de nuestro trabajo, en esta
+                ocasión nuestro cliente vino desalentado, pensando en que debería pintar la tapa de baúl en su auto,
+                afortunadamente no hubo necesidad de pintar, que aparte de ser mucho más caro no se conserva la pintura
+                original. Nosotros que queremos a los autos tratamos a toda costa hacer el menor daño posible en la
+                chapa.
+                <br>
                 Su satisfacción es nuestra prioridad.
             </p>
         </section>
@@ -67,16 +83,23 @@
     <footer id="gridFooter" class="flexFooter">
 
         <div class="flexDivFooter1">
-            <a class="bordeImgFooter" href="https://www.facebook.com" target="_blank">  <img class="IconFooter" src="../imagenes/facebook icon.jpg"  alt="Facebook"> </a>
-            <a class="bordeImgFooter" href="https://www.instagram.com" target="_blank">  <img class="IconFooter" src="../imagenes/insta icon.jpg"  alt="Instagram"> </a>
-            <a class="bordeImgFooter" href="https://www.twitter.com" target="_blank">  <img class="IconFooter" src="../imagenes/twitter icon.jpg"  alt="Twitter"> </a>
+            <a class="bordeImgFooter" href="https://www.facebook.com" target="_blank"> <img class="IconFooter"
+                    src="../imagenes/facebook icon.jpg" alt="Facebook"> </a>
+            <a class="bordeImgFooter" href="https://www.instagram.com" target="_blank"> <img class="IconFooter"
+                    src="../imagenes/insta icon.jpg" alt="Instagram"> </a>
+            <a class="bordeImgFooter" href="https://www.twitter.com" target="_blank"> <img class="IconFooter"
+                    src="../imagenes/twitter icon.jpg" alt="Twitter"> </a>
             <span class="fuenteFooter"> SEGUINOS </span>
         </div>
         <div class="flexDivFooter2">
             <span class="fuenteFooter">Copyright - Todos los derechos reservados</span>
         </div>
-    
+
     </footer>
-    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
