--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Servicios</title>
 </head>
 <body id="gridAreas">
     <header id="gridHeader" class="flexHeader">
         <div class="flexHeaderImg">
-            <a href="../index.html"><img class="imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura"> </a>
+            <a href="../index.html"><img class="animate__animated animate__fadeInDown imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura"> </a>
         </div>
         <div class="flexHeaderDiv">
             <nav class="flexHeaderNav">
@@ -48,26 +50,26 @@
     </header>
     <main id=gridMain class="fondoCeleste">
         
-        <section class="flexServiciosH2">
+        <section class="animate__animated animate__lightSpeedInLeft flexServiciosH2">
             <h2>Nuestros servicios:</h2>
         </section>
         <br>
 
         <section class="flexMainServicios">
         
-        <div class="flexMainServicios2">
+        <div class="animate__animated animate__fadeInUp flexMainServicios2">
             <a href="chapaypintura.html"><img class="imgServicios" src="../imagenes/hombre en cabina.jpg" alt="Hombre pintando un capot en una cabina"></a>
             <br>
             <p class="fuenteGrande">Chaperia y pintura</p>
         </div>
 
-        <div class="flexMainServicios2">
+        <div class="animate__animated animate__fadeInUp flexMainServicios2">
             <a href="desabollado.html"><img class="imgServicios"  src="../imagenes/sacabollo.jpg" alt="Hombre reparando un auto sin pintar"></a>
             <br>
             <p class="fuenteGrande">Desabollado</p>
         </div>
 
-        <div class="flexMainServicios2">
+        <div class="animate__animated animate__fadeInUp flexMainServicios2">
             <a href="lustre.html"><img class="imgServicios" src="../imagenes/hombre puliendo2.jpg" alt="Hombre lustrando un auto"></a>
             <br>
             <p class="fuenteGrande">Lustre</p>
