--- a/paginas/trabajos.html
+++ b/paginas/trabajos.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Trabajos</title>
 </head>
 <body id="gridAreas">
     <header id="gridHeader" class="flexHeader">
         <div class="flexHeaderImg">
-            <a href="../index.html"><img class="imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura"> </a>
+            <a href="../index.html"><img class="animate__animated animate__fadeInDown imgLogo" src="../imagenes/logo.jpg" alt="Logo taller chapa y pintura"> </a>
         </div>
         <div class="flexHeaderDiv">
             <nav class="flexHeaderNav">
@@ -49,10 +51,10 @@
     <main id=gridMain class="fondoCeleste">
 
         <section>
-            <h2 class="flexServiciosH2"> Estos son algunos de nuestros trabajos realizados:  </h2>
+            <h2 class="animate__animated animate__lightSpeedInLeft flexServiciosH2"> Estos son algunos de nuestros trabajos realizados:  </h2>
         </section>
         <section class="flexMainTrabajos">
-            <!--Colocar imágenes (Espero rotativas) modo Antes y despues -->
+            <!--Proximamente carrousel -->
             <img class="imgSectionNosotros" src="../imagenes/antes y despues3.jpg" alt="Antes y después de realizar un trabajo en Peugeot 308">
         </section>
 
