--- a/paginas/lustre.html
+++ b/paginas/lustre.html
@@ -76,9 +76,9 @@
     <footer id="gridFooter" class="flexFooter">
 
         <div class="flexDivFooter1">
-            <a class="bordeImgFooter" href="https://www.facebook.com" target="_blank">  <img class="IconFooter" src="../imagenes/facebook icon.jpg"  alt="Facebook"> </a>
-            <a class="bordeImgFooter" href="https://www.instagram.com" target="_blank">  <img class="IconFooter" src="../imagenes/insta icon.jpg"  alt="Instagram"> </a>
-            <a class="bordeImgFooter" href="https://www.twitter.com" target="_blank">  <img class="IconFooter" src="../imagenes/twitter icon.jpg"  alt="Twitter"> </a>
+            <a class="bordeImgFooter" href="https://www.facebook.com" target="_blank">  <img class="iconFooter" src="../imagenes/facebook icon.jpg"  alt="Facebook"> </a>
+            <a class="bordeImgFooter" href="https://www.instagram.com" target="_blank">  <img class="iconFooter" src="../imagenes/insta icon.jpg"  alt="Instagram"> </a>
+            <a class="bordeImgFooter" href="https://www.twitter.com" target="_blank">  <img class="iconFooter" src="../imagenes/twitter icon.jpg"  alt="Twitter"> </a>
             <span class="fuenteFooter"> SEGUINOS </span>
         </div>
         <div class="flexDivFooter2">
