listo para subir al repo

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -55,7 +55,7 @@
                 <p class="animate__animated animate__fadeInDown textoMargin">
                     tallermartinez@contacto.com <br>
                     Calle Callao 3071 <br>
-                    Celular: (0341) 3153341 - (0341) 5956059 <br>
+                    Celular: (0341) 3153341 <br>
                 </p>
                 
                 <iframe class="imgMargin iframeSize" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.3148120556125!2d-60.668876585169414!3d-32.96909518035425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab78f0c3903f%3A0x6fe80b6374432924!2sCallao%203071%2C%20S2000%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1641596755913!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
