ultimos toques responsive mobile

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -69,7 +69,7 @@
         <section class="flexSectionNosotros2">
             <!--Prometo que la img será un video =D-->
             <img data-aos="fade-right" class="imgSectionNosotros"" src=" ../imagenes/hombre en cabina.jpg" alt="El equipo">
-            <p data-aos="fade-left" class="imgSectionNosotros alineacionTextoDerecha">Solo una pequeña muestra de nuestro trabajo, en esta
+            <p data-aos="fade-left" class="imgSectionNosotros">Solo una pequeña muestra de nuestro trabajo, en esta
                 ocasión nuestro cliente vino desalentado, pensando en que debería pintar la tapa de baúl en su auto,
                 afortunadamente no hubo necesidad de pintar, que aparte de ser mucho más caro no se conserva la pintura
                 original. Nosotros que queremos a los autos tratamos a toda costa hacer el menor daño posible en la
