agregue bootstrap a todos los html

--- a/paginas/desabollado.html
+++ b/paginas/desabollado.html
@@ -53,27 +53,41 @@
             </nav>
         </div>
     </header>
+
     <main id=gridMain class="fondoCeleste">
         
-        <section>
-            <h2 class="animate__animated animate__lightSpeedInLeft flexServiciosH2">Desabollado</h2>
-            <div class="flexMainDesabollado">
-                <!--Proximamente un video irá aquí por ahora pongo img-->
-                <img class="imgSectionNosotros" src="../imagenes/sacabollo.jpg" alt="hombre desabollando auto">
-                <p data-aos="fade-left" class=" textoTamaño textoMargin alineacionTextoDerecha">
-                    La artesanía de desabollar un auto sin pintar consiste en trabajar con unas varillas especiales que se utilizan para arreglar el golpe o bollo, ejerciendo presión y empuje desde el interior de la carrocería con gran precisión y cuidado para evitar el daño en la chapa o en la pintura del vehículo. De esta manera se consigue la conservación de la pintura original.
-                </p>
-            </div>
+        <section class="container my-5">
+            <h1 class="animate__animated animate__lightSpeedInLeft h3">Desabollado</h1>
+            <div class="row">
+                <div class="col d-flex justify-content-start align-items-center">
+                    <img class="imgMainDesabollado" src="../imagenes/sacabollo.jpg" alt="hombre desabollando auto">
+                </div>
+                <div class="col d-flex align-items-center text-end">
+                    <p data-aos="fade-left" class="text-end px-3">
+                        La artesanía de desabollar un auto sin pintar consiste en trabajar con unas varillas especiales que se utilizan para arreglar el golpe o bollo, ejerciendo presión y empuje desde el interior de la carrocería con gran precisión y cuidado para evitar el daño en la chapa o en la pintura del vehículo. De esta manera se consigue la conservación de la pintura original.
+                    </p>
+                </div>
+            </div>            
         </section>
 
-        <section class="flexMainChapa2">
-            <div data-aos="fade-right" class="flexMainChapa3">
-                <p class="textoMargin">Chapa y Pintura</p>
-                <a href="./chapaypintura.html"><img src="../imagenes/hombre en cabina.jpg"class="imgServicios" alt="Hombre pintando auto"></a>
-            </div>
-            <div data-aos="fade-left" class="flexMainChapa3">
-                <p class="textoMargin">Lustre</p>
-                <a href="./lustre.html"><img src="../imagenes/hombre puliendo.jpg" class="imgServicios" alt="Hombre puliendo un auto"></a>
+        <section class="container my-5">
+            <div class="row">
+                <div class="col">
+                    <div data-aos="fade-right" class="text-center">
+                        <p>Chapa y Pintura</p>
+                    </div>
+                    <div data-aos="fade-right" class=" text-center">
+                        <a href="./chapaypintura.html"><img src="../imagenes/hombre en cabina.jpg"class="imgServicios" alt="Hombre pintando auto"></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div data-aos="fade-left" class="text-center">
+                        <p>Lustre</p>
+                    </div>
+                    <div data-aos="fade-left" class="text-center">
+                        <a href="./lustre.html"><img src="../imagenes/hombre puliendo.jpg" class="imgServicios" alt="Hombre puliendo un auto"></a>
+                    </div>
+                </div>
             </div>
         </section>
 
