--- a/paginas/lustre.html
+++ b/paginas/lustre.html
@@ -56,28 +56,38 @@
 
     <main id=gridMain class="fondoCeleste">
 
-        <section>
-            <h2 class="animate__animated animate__lightSpeedInLeft flexServiciosH2">Lustre</h2>
-            <div data-aos="fade-up" class="flexMainLustre">
+        <section class="container">
+            <h1 class="animate__animated animate__lightSpeedInLeft h3">Lustre</h1>
+            <div data-aos="fade-up">
                 <p>Lustrar y pulir un automóvil es fundamental para resaltar el diseño del vehículo y dar brillo a todas sus partes. Pero los materiales y métodos que utilicemos serán determinantes para lograr el acabado deseado, nosotros al contar con la mano de obra y materiales de primera calidad la terminación en su auto está asegurada.</p>
             </div>
-            <div data-aos="fade-up" class="flexMainLustre2">
-                <img src="../imagenes/lustre1.jpg" width="25%" alt="Encintando auto antes de lustrar">
-                <img src="../imagenes/lustre2.jpg" width="25%" alt="Persona lustrando auto">
-                <img src="../imagenes/lustre3.jpg" width="25%" alt="Sacando brillo al auto">
-            </div>
-        </section>
-        <section class="flexMainChapa2">
-            <div data-aos="fade-right" class="flexMainChapa3">
-                <p class="textoMargin">Chapa y pintura</p>
-                <a href="./chapaypintura.html"><img src="../imagenes/hombre en cabina.jpg" class="imgServicios" alt="Hombre pintando guardabarro"></a>
-            </div>
-            <div data-aos="fade-left" class="flexMainChapa3">
-                <p class="textoMargin">Desabollado</p>
-                <a href="./desabollado.html"><img src="../imagenes/chupeta.jpg"class="imgServicios" alt="Hombre desabollando auto"></a>
+            <div data-aos="fade-up" class="d-flex justify-content-center py-3">
+                <img src="../imagenes/lustre1.jpg" class="px-3" width="30%" alt="Encintando auto antes de lustrar">
+                <img src="../imagenes/lustre2.jpg" class="px-3" width="30%" alt="Persona lustrando auto">
+                <img src="../imagenes/lustre3.jpg" class="px-3" width="30%" alt="Sacando brillo al auto">
             </div>
         </section>
 
+        <section class="container my-5">
+            <div class="row">
+                <div class="col">
+                    <div data-aos="fade-right" class="text-center">
+                        <p>Chapa y Pintura</p>
+                    </div>
+                    <div data-aos="fade-right" class=" text-center">
+                        <a href="./chapaypintura.html"><img src="../imagenes/hombre en cabina.jpg"class="imgServicios" alt="Hombre pintando auto"></a>
+                    </div>
+                </div>
+                <div class="col">
+                    <div data-aos="fade-left" class="text-center">
+                        <p>Desabollado</p>
+                    </div>
+                    <div data-aos="fade-left" class="text-center">
+                        <a href="./desabollado.html"><img src="../imagenes/chupeta.jpg" class="imgServicios" alt="Hombre desabollando auto"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
     <footer id="gridFooter" class="container-fluid d-flex flex-wrap justify-content-around align-items-center py-3 my-4 border-top bg-dark">
