col nosotros.html y bootstrap en contacto.html

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -121,14 +121,14 @@
 
         <section class="container containerSizeNos my-5">
             <div class="row">
-                <div class="col d-flex justify-content-center align-items-center">
+                <div class="col-7 col-sm-7 col-lg-6 d-flex justify-content-center align-items-center">
                     <video data-aos="fade-right" src="../videos/chevrolet_antes.mp4" class="imgMainNosotros px-1"
                     controls></video>
                     <video data-aos="fade-right" src="../videos/chevrolet_despues.mp4" class="imgMainNosotros px-1"
                     controls></video>
                 </div>
                 
-                <div class="col d-flex align-items-center text-end">
+                <div class="col-5 col-sm-5 col-lg-6 d-flex align-items-center text-end">
                     <p data-aos="fade-left">Solo una pequeña muestra de nuestro trabajo, en esta
                         ocasión nuestro cliente vino desalentado, pensando en que debería pintar la tapa de baúl en su auto,
                         afortunadamente no hubo necesidad de pintar, que aparte de ser mucho más caro no se conserva la pintura
